@@ -2,17 +2,17 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Radio Player</title>
+        <title>網路電台</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
         <script type="text/javascript" src="player.js"></script>
     </head>
     <body>
         <div id='panel' style='position:fixed;text-align:center;'>
             <fieldset>
-                <legend>Radio Player</legend>
+                <legend>網路電台</legend>
+                <input id='control' type='button' value='撥放'/>
                 <select id="category"></select>
                 <select id="channel"></select>
-                <input id='control' type='button' value='play'/>
             </fieldset>
             <div id='player'></div>
         </div>
